--- a/.github/workflows/build-containers.yml
+++ b/.github/workflows/build-containers.yml
@@ -67,8 +67,11 @@ jobs:
           echo "experimental-features = nix-command flakes" >> ~/.config/nix/nix.conf
           echo "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}" >> ~/.config/nix/nix.conf
           
+          # Set GitHub token as environment variable for this session
+          export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          
           # Install Node.js for GitHub Actions compatibility using explicit experimental features
-          nix --extra-experimental-features "nix-command flakes" profile install nixpkgs#nodejs_20
+          nix --extra-experimental-features "nix-command flakes" profile add nixpkgs#nodejs_20
           # Create symlinks in expected locations
           mkdir -p /__e/node20/bin
           ln -sf $(which node) /__e/node20/bin/node
@@ -79,8 +82,10 @@ jobs:
 
       - name: Setup Docker
         run: |
+          # Set GitHub token for authenticated access
+          export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           # Install and start Docker using explicit experimental features
-          nix --extra-experimental-features "nix-command flakes" profile install nixpkgs#docker
+          nix --extra-experimental-features "nix-command flakes" profile add nixpkgs#docker
           dockerd --host=unix:///var/run/docker.sock &
           sleep 10
 
@@ -93,6 +98,8 @@ jobs:
 
       - name: Build nix2container image
         run: |
+          # Set GitHub token for authenticated access
+          export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           # Build image using Nix flakes with explicit experimental features
           nix --extra-experimental-features "nix-command flakes" build .#${{ matrix.name }} --print-build-logs
 
