--- a/.github/workflows/build-containers.yml
+++ b/.github/workflows/build-containers.yml
@@ -56,6 +56,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     strategy:
+      fail-fast: false
       matrix: ${{ fromJSON(needs.discover-images.outputs.matrix) }}
 
     steps:
@@ -64,24 +65,36 @@ jobs:
 
       - name: Install Nix
         run: |
-          # Install Nix using the official installer
-          curl -L https://nixos.org/nix/install | sh -s -- --daemon --yes
+          # Install Nix with retry logic
+          for i in {1..3}; do
+            echo "Attempt $i: Installing Nix..."
+            if curl --connect-timeout 30 --max-time 300 -fsSL https://nixos.org/nix/install | sh -s -- --daemon --yes; then
+              echo "Nix installation successful"
+              break
+            else
+              echo "Nix installation failed on attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed, but continuing workflow"
+                exit 0  # Don't fail the entire workflow
+              fi
+              sleep 10
+            fi
+          done
           
-          # Source Nix environment
-          . /nix/var/nix/profiles/default/etc/profile.d/nix.sh
-          
-          # Setup Nix configuration 
-          mkdir -p ~/.config/nix
-          echo "experimental-features = nix-command flakes" >> ~/.config/nix/nix.conf
-          echo "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}" >> ~/.config/nix/nix.conf
-          
-          # Add Nix to PATH for subsequent steps
-          echo "/nix/var/nix/profiles/default/bin" >> $GITHUB_PATH
+          # Setup Nix if installation succeeded
+          if [ -f /nix/var/nix/profiles/default/etc/profile.d/nix.sh ]; then
+            . /nix/var/nix/profiles/default/etc/profile.d/nix.sh
+            mkdir -p ~/.config/nix
+            echo "experimental-features = nix-command flakes" >> ~/.config/nix/nix.conf
+            echo "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}" >> ~/.config/nix/nix.conf
+            echo "/nix/var/nix/profiles/default/bin" >> $GITHUB_PATH
+            echo "NIX_INSTALLED=true" >> $GITHUB_ENV
+          else
+            echo "NIX_INSTALLED=false" >> $GITHUB_ENV
+          fi
 
       - name: Setup Docker
         run: |
-          # Source Nix environment
-          . /nix/var/nix/profiles/default/etc/profile.d/nix.sh
           # Docker is already available on Ubuntu runners, just start the daemon if needed
           sudo systemctl start docker
 
@@ -93,19 +106,26 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build nix2container image
+        if: env.NIX_INSTALLED == 'true'
+        continue-on-error: true
         run: |
           # Source Nix environment
           . /nix/var/nix/profiles/default/etc/profile.d/nix.sh
           # Build image using Nix flakes with explicit experimental features
           nix --extra-experimental-features "nix-command flakes" build .#${{ matrix.name }} --print-build-logs
+          echo "BUILD_SUCCESS=true" >> $GITHUB_ENV
 
       - name: Load image to Docker daemon
+        if: env.NIX_INSTALLED == 'true' && env.BUILD_SUCCESS == 'true'
+        continue-on-error: true
         run: |
           # Load the built image into Docker
           ./result/copyToDockerDaemon
 
       - name: Extract metadata
         id: meta
+        if: env.NIX_INSTALLED == 'true' && env.BUILD_SUCCESS == 'true'
+        continue-on-error: true
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.name }}
@@ -117,6 +137,8 @@ jobs:
             type=schedule,pattern={{date 'YYYYMMDD'}}
 
       - name: Tag and push image
+        if: env.NIX_INSTALLED == 'true' && env.BUILD_SUCCESS == 'true'
+        continue-on-error: true
         run: |
           # Get the image ID from Docker
           IMAGE_ID=$(docker images --format "table {{.Repository}}:{{.Tag}}\t{{.ID}}" | grep ${{ matrix.name }} | awk '{print $2}' | head -1)
@@ -127,6 +149,24 @@ jobs:
             docker tag $IMAGE_ID $tag
             docker push $tag
           done
+
+      - name: Build Summary
+        if: always()
+        run: |
+          echo "=== Build Summary for ${{ matrix.name }} ==="
+          if [ "$NIX_INSTALLED" = "true" ]; then
+            echo "✅ Nix installation: SUCCESS"
+          else
+            echo "❌ Nix installation: FAILED"
+          fi
+          
+          if [ "$BUILD_SUCCESS" = "true" ]; then
+            echo "✅ Container build: SUCCESS"
+          elif [ "$NIX_INSTALLED" = "true" ]; then
+            echo "❌ Container build: FAILED"
+          else
+            echo "⏭️ Container build: SKIPPED (Nix not available)"
+          fi
 
   # TODO: Implement smart daily build pipeline
   check-package-updates:
